fix: correct spelling of 'onSaveSuccess' in ClienteFormModal and DespesaFormModal components
feat: add new Badge color scheme for 'pix' and update styles accordingly

feat: implement VendasPage with filtering, modal for new sales, and sales details

feat: create VendaFormModal for registering sales with item management

feat: add VendasTable component for displaying sales with details and actions

feat: implement AutoCompleteInput for product filtering in sales

feat: add services for handling sales data including fetching and registering sales

feat: define types for sales requests and responses in domain types